added hero image, headshot, and some styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Asha Dorsey</title>
   </head>
   <body>
-    <!-- navigation tags - block level element -->
+    <!-- NAVIGATION SECTION - block level element -->
     <header>
       <h1>
         <a href="/">Asha Dorsey</a>
@@ -31,8 +31,31 @@
       </nav>
     </header>
     <!-- end navigation -->
-    <!-- hero/jumbotron -->
+
+    <!-- HERO SECTION -->
      <section class="hero">
-        <div class="hero-cta">
+        <div class="hero-img">
+            <img src="./assets/images/Asha Dorsey_headshot.jpg" alt="" />
           <h2>Full Stack Portfolio</h2>
         </div>
+    </section>
+    <!-- FOOTER SECTION -->
+    <footer>
+        <div>
+            <ul>
+                <li>
+                    <a>(786)309-3840</a>
+                </li>
+                <li>
+                    <a href="mailto:ashadorsey@gmail.com">ashadorsey@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://github.com/adorsey5">GitHub</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/asha-dorsey5">LinkedIn</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+      <!-- footer end -->
