added more compatibility in HTML and changed root colors in CSS

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-    <link rel="stylesheet" href="./assets/css/style.css">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
     <title>Asha Dorsey</title>
-  </head>
+    <link rel="stylesheet" href="./assets/css/style.css" /> 
+    <link rel="icon" href="./assets/images/favicon.ico">
+</head>
+
   <body>
     <!-- NAVIGATION SECTION - block level element -->
     <header>
@@ -39,6 +42,49 @@
           <h2>Full Stack Portfolio</h2>
         </div>
     </section>
+
+    <main class="page-wrapper"></main>
+
+    <!-- About Me Section -->
+    <article class="page-section" id="about">
+        <h2>About Me</h2>
+        <div>
+            <p>My name is Asha Dorsey and I have always had an interest in learning the languages of 
+                web applications.  Coming from a clinical research I wanted to deploy new digital tools
+                and applications to work more efficiently.  As the Technolgy Lead in my department I hope
+                to teach my team about the importance of using web application to enhance productivity, limit 
+                human error, and decrease waste. Building my portfolio of my work personal projects is what
+                I will be showcasing on this web page                   
+            </br>More Projects Coming Soon.
+            </p>
+        </article> 
+
+      <!-- Portfolio Section -->
+      <section class="page-section" id="work">
+        <h2>My Work</h2>
+        <div class="grid-container">
+          <!--  Project #1 -->
+          <a href="https://github.com/adorsey5/run-buddy" class="grid-item runbuddy">
+            <div>
+              <h3>Run Buddy</h3>
+              <span>HTML, CSS</span>
+            </div>
+          </a>
+          <!-- Project #2 -->
+          <a href="https://github.com/adorsey5/revise-the-sunrise" class="grid-item horiseon">
+            <div>
+              <h3>Horiseon</h3>
+              <span>HTML, CSS</span>
+            </div>
+          </a>
+          <!-- Project #3 -->
+          <a href="#" class="grid-item navmenu">
+            <div>
+              <h3>Place Holder</h3>
+              <span>Placeholder</span>
+            </div>
+          </a>
+        </section>
     <!-- FOOTER SECTION -->
     <footer>
         <div>
