added HTML elements and styles to the NAVIGATION AND HEADER SECTION

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <link rel="icon" href="./assets/images/favicon.ico">
 </head>
 
-  <body>
-    <!-- NAVIGATION SECTION - block level element -->
+<body>
+    <!-- NAVIGATION AND HEADER SECTION-->
     <header>
-      <h1>
-        <a href="/">Asha Dorsey</a>
-      </h1>
-      <nav>
-        <ul>
-          <li>
+        <h1>Asha Dorsey</h1>
+        <nav>
+          <ul>
+            <li>
             <a href="#about-me">About Me</a>
           </li>
           <li>
@@ -28,10 +26,10 @@
             <a href="#contact-me">Contact Me</a>
           </li>
           <li>
-            <a href="#resume">Resume</a>
+            <a href="./assets/A.Dorsey_resume.pdf">Resume</a>   
           </li>
         </ul>
-      </nav>
+          </nav>
     </header>
     <!-- end navigation -->
 
