edited the hero section and styled more nav elements

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     </header>
     <!-- end navigation -->
 
-    <!-- HERO SECTION -->
-     <section class="hero">
-        <div class="hero-img">
-            <img src="./assets/images/Asha Dorsey_headshot.jpg" alt="" />
-          <h2>Full Stack Portfolio</h2>
+    <!--HERO SECTION-->
+    <section class="hero">
+        <img src="./assets/images/Asha Dorsey_headshot.jpg" alt="headshot of Asha Dorsey"/>
+        <div>
+            <h2>||Full Stack Portfolio||</h2>
         </div>
-    </section>
+      </section>
 
-    <main class="page-wrapper"></main>
+    
 
     <!-- About Me Section -->
     <article class="page-section" id="about">
