edited the About Me section and added styles to the hero section

--- a/index.html
+++ b/index.html
@@ -41,19 +41,22 @@
         </div>
       </section>
 
-    
-
+     <!-- MAIN CONTENT SECTION-->
+   <main class="content-wrapper">
     <!-- About Me Section -->
-    <article class="page-section" id="about">
-        <h2>About Me</h2>
+    <article class="content-section" >
+        <h2 style= "position:relative"> <!-- used positioning to off set fixed header -->
+         <span id="about-me" style= "position:absolute; top: -165px"></span>
+         About
+        <br> Me
+        </h2>
         <div>
             <p>My name is Asha Dorsey and I have always had an interest in learning the languages of 
                 web applications.  Coming from a clinical research I wanted to deploy new digital tools
-                and applications to work more efficiently.  As the Technolgy Lead in my department I hope
-                to teach my team about the importance of using web application to enhance productivity, limit 
-                human error, and decrease waste. Building my portfolio of my work personal projects is what
-                I will be showcasing on this web page                   
-            </br>More Projects Coming Soon.
+                and applications to work more efficiently.  I hope to continue learning more about the importance
+                of using web application to enhance productivity, limit human error, and decrease waste. 
+                Building my portfolio of my work personal projects is what I will be showcasing on this web page.                  
+            </br>STAY TUNED FOR FUTURE PROJECTS!
             </p>
         </article> 
 
