edited the Work/Grid section

--- a/index.html
+++ b/index.html
@@ -60,32 +60,39 @@
             </p>
         </article> 
 
-      <!-- Portfolio Section -->
-      <section class="page-section" id="work">
-        <h2>My Work</h2>
+      <!-- Work/Grid SECTION -->
+    <section class="content-section">
+        <h2 style= "position:relative"> <!-- used positioning to off set fixed header -->
+          <span id="work" style= "position:absolute; top: -165px"></span>
+          Work
+        </h2>
         <div class="grid-container">
-          <!--  Project #1 -->
-          <a href="https://github.com/adorsey5/run-buddy" class="grid-item runbuddy">
+          <!-- Project #1 -->
+          <a href="https://adorsey5.github.io/run-buddy/" 
+            class="run-buddy grid-item">
             <div>
               <h3>Run Buddy</h3>
-              <span>HTML, CSS</span>
+              <span>HTML/ CSS</span>
             </div>
           </a>
           <!-- Project #2 -->
-          <a href="https://github.com/adorsey5/revise-the-sunrise" class="grid-item horiseon">
+          <a href="https://adorsey5.github.io/revise-the-sunrise/" 
+            class="horiseon grid-item">
             <div>
               <h3>Horiseon</h3>
-              <span>HTML, CSS</span>
+              <span>HTML/ CSS</span>
             </div>
           </a>
           <!-- Project #3 -->
-          <a href="#" class="grid-item navmenu">
+          <a href="#" 
+            class="placeholder grid-item">
             <div>
               <h3>Place Holder</h3>
               <span>Placeholder</span>
             </div>
           </a>
         </section>
+        
     <!-- FOOTER SECTION -->
     <footer>
         <div>
