edited the contact section, deleted the footer

--- a/index.html
+++ b/index.html
@@ -92,24 +92,37 @@
             </div>
           </a>
         </section>
-        
-    <!-- FOOTER SECTION -->
-    <footer>
+
+    <!-- CONTACT SECTION -->
+    <section class="content-section contact" 
+      id="contact-me">
+        <h2>Contact <br> Me</h2>
         <div>
-            <ul>
-                <li>
-                    <a>(786)309-3840</a>
-                </li>
-                <li>
-                    <a href="mailto:ashadorsey@gmail.com">ashadorsey@gmail.com</a>
-                </li>
-                <li>
-                    <a href="https://github.com/adorsey5">GitHub</a>
-                </li>
-                <li>
-                    <a href="https://www.linkedin.com/in/asha-dorsey5">LinkedIn</a>
-                </li>
-            </ul>
+          <address>
+            <!-- Phone -->
+            <a>(786)309-3840</a>
+            <!-- Email -->
+            <a href="mailto:ashadorsey@gmail.com">Email
+          </a>
+            <!-- Github -->
+              <a href="https://github.com/adorsey5" 
+                target="_blank">
+                  GitHub
+              </a>
+               <!-- LinkedIn -->
+              <a href="https://www.linkedin.com/in/asha-dorsey5" 
+                target="_blank">
+                  Linkedin
+              </a>
+              <!-- Website -->
+               <a href="#" target="_blank"> 
+             Website
+            </a>
+          </address>
         </div>
-    </footer>
-      <!-- footer end -->
+      </section>
+     </body>
+     </html>
+  </main>
+</body>
+</html>
