added interactive front end project

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             </div>
           </a>
           <!-- Project #3 -->
-          <a href="#" 
-            class="placeholder grid-item">
+          <a href="https://zela7alex.github.io/love-match-calculator/" 
+            class="lovematch grid-item">
             <div>
-              <h3>Place Holder</h3>
-              <span>Placeholder</span>
+              <h3>Love Match Calculator</h3>
+              <span>Server Side APIs</span>
             </div>
           </a>
         </section>
