edited the README

--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
               <span>Server Side APIs</span>
             </div>
           </a>
+          <!-- Project #4 -->
+          <a href="https://ouiii-party.herokuapp.com/" 
+            class="OUiii grid-item">
+            <div>
+              <h3>Oui Party Together</h3>
+              <span>Interactive Full Stack Application</span>
+            </div>
+          </a>
         </section>
 
     <!-- CONTACT SECTION -->
